fix hero and information wrap code

--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body{
 	font-family: Roboto, sans-serif;
-	height:100vh;
 	margin:0;
 	display:flex;
 	flex-flow:column nowrap;
@@ -11,18 +10,16 @@ body{
 }
 
 img{
-	height:auto;
-	width:400px;
 	border-radius:5px;
 }
 
 .header, .hero{
-	padding:32px 200px;
+	padding:32px 200px; 
 	background-color:#1f2937;
 }
 
 .information, .quote{
-	padding:32px 300px;
+	padding:32px 250px;
 }
 
 /* header */
@@ -54,13 +51,17 @@ ul{
 /* hero */
 .hero{
 	display:flex;
+	flex-wrap:wrap;
+	justify-content:space-between;
 }
 
 .hero-container{
 	display:flex;
+	justify-content:center;
 	flex-flow:column nowrap;
 	gap:16px;
-	padding-right:128px;
+	max-width: 400px;
+	/* padding-right:128px; */
 }
 
 .hero-main-text{
@@ -87,10 +88,9 @@ ul{
 	background-color:#3275DD;
 }
 
-.hero-img{
-	align-self:flex-start;
-	width:auto;
-	margin-left:auto;
+.hero-img img{
+	height:auto;
+	width:500px;
 }
 
 /* information */
@@ -113,12 +113,19 @@ ul{
 .info-cards{
 	color:#1f2937;
 	display:flex;
-	/* justify-content:space-between; */
+	flex-flow:row wrap;
+	justify-content:space-between;
 	padding:16px 0;
-	width:200px;
 }
 
-.card img{
+.card{
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+	gap:16px; 	
+}
+
+.info-cards img{
 	height:200px;
 	width:200px;
 	object-fit:cover;
@@ -127,4 +134,11 @@ ul{
 /* quote */
 .quote{
 	background-color:#e5e7eb;
+}
+
+.text-quote{
+	color:#1f2937;
+	font-size:36px;
+	font-style:italic;
+	font-weight:100;
 }
